# migrator

./: Anchor.toml  Cargo.toml  README.md  package.json  tsconfig.json
programs/libreplex_migrator/: Cargo.toml
programs/libreplex_migrator/src/: lib.rs
programs/libreplex_migrator/src/instructions/: migrate_lite.rs  mod.rs
programs/migraboss/: Cargo.toml
programs/migraboss/src/: entrypoint.rs  lib.rs  main.rs
programs/migraboss/src/commands/: migrate_lite.rs  mod.rs
src/: constants.ts  getLegacyMetadataPda.ts  getLibreMetadataPda.ts  getLibreSignerPda.ts  getProgramInstance.ts  migrator.ts
