[package]
name = "libreplex_migrator"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "libreplex_migrator"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = {version = "0.28.0", features = ["init-if-needed"]}
anchor-spl = {version = "0.28.0"}
libreplex_metadata = { version='0.1.1', features =["cpi", "no-entrypoint"]}
mpl-token-metadata = { version='1.12.0', features=["no-entrypoint"]}
